Because I needed to upload something
added half of my greybox, textures help distinguish parts of environment

--- a/PlatformerTemplate.uproject
+++ b/PlatformerTemplate.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{576D389B-464F-0EDA-7D3D-D39359351633}",
+	"EngineAssociation": "5.0",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
