Added greybox of hubworld

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,12 +3,12 @@ GameName=PlatformerTemplate
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Default_Controls/DEF_Test_Map.DEF_Test_Map
-GameDefaultMap=/Game/Default_Controls/DEF_Test_Map.DEF_Test_Map
+GameDefaultMap=/Game/HUBWORLD/Hubworld.Hubworld
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Default_Controls/DEF_ThirdPersonGameMode.DEF_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
