--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,3 +99,6 @@ ManualIPAddress=
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
 
+[/Script/Engine.PhysicsSettings]
+DefaultShapeComplexity=CTF_UseComplexAsSimple
+
