Content Batch - Changed Build settings to combat build issues from Monday - Added Portal to hubworld - Added TeleOrb SFX - Changed and added new background audio for TeleOrb level

--- a/PlatformerTemplate.uproject
+++ b/PlatformerTemplate.uproject
@@ -25,6 +25,21 @@
 		{
 			"Name": "ModelingToolsEditorMode",
 			"Enabled": true
+		},
+		{
+			"Name": "OnlineSubsystemIOS",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"IOS",
+				"TVOS"
+			]
+		},
+		{
+			"Name": "IOSDeviceProfileSelector",
+			"Enabled": false
 		}
+	],
+	"TargetPlatforms": [
+		"Windows"
 	]
 }
