--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,7 +25,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/JumpWall_Market")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/JumpWall_Market")
 bSmoothFrameRate=False
-bUseFixedFrameRate=True
+bUseFixedFrameRate=False
 FixedFrameRate=90.000000
 
 [/Script/Engine.CollisionProfile]
